<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.login.LoginFragment"
        android:label="@string/fragment_login"
        tools:layout="@layout/fragment_login"
        >
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.welcome.WelcomeFragment"
        android:label="@string/fragment_welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.instructions.InstructionsFragment"
        android:label="@string/fragment_instructions"
        tools:layout="@layout/fragment_instructions">
        <action
            android:id="@+id/action_instructionsFragment_to_listingFragment"
            app:destination="@id/listingFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/listingFragment"
        android:name="com.udacity.shoestore.listing.ListingFragment"
        android:label="@string/fragment_listing"
        tools:layout="@layout/fragment_listing">
        <action
            android:id="@+id/action_listingFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_listingFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.udacity.shoestore.details.DetailsFragment"
        android:label="@string/fragment_details"
        tools:layout="@layout/fragment_details">
        <action
            android:id="@+id/action_detailsFragment_to_listingFragment"
            app:destination="@id/listingFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popUpTo="@id/listingFragment" />
    </fragment>
</navigation>