<?xml version="1.0" encoding="utf-8"?>
<layout>

    <!-- The fragment layout uses a ConstraintLayout since the welcome layout needs to adapt to various
    screen sizes and vertical/horizontal orientation (keeping the correct margins and padding).
     -->

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".welcome.WelcomeFragment">

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/welcome_title"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/welcome_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/instructions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/instructions"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/welcome_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:singleLine="false"
            android:text="@string/welcome_details"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/instructions_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>